# SVZ

GAME/: AnimationController.h  Collision.cpp  Collision.hpp  Game.cpp  Game.h  LoaderManager.cpp  LoaderManager.hpp  Scenario.cpp  Scenario.hpp  Vector2D.cpp  Vector2D.hpp  main.cpp
GAME.xcodeproj/: project.pbxproj
GAME.xcodeproj/project.xcworkspace/xcuserdata/andreadiaz.xcuserdatad/: UserInterfaceState.xcuserstate
GAME/ECS/: AnimationController.h  ColliderComponent.hpp  Components.hpp  ECS.hpp  KeyboardController.hpp  Sprite.hpp  TransformComponent.hpp
GIT-instrucciones/: commit_branch.txt
Proyecto/: AnimationController.cpp  CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  SoundManager.h
personajes/: personaje1.psd  scenario.psd  title.psd  zombie.psd
